Bug 268311 - [WGSL] Type constructors should not be used as types
Summary: [WGSL] Type constructors should not be used as types
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGPU (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Tadeu Zagallo
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2024-01-29 10:30 PST by Tadeu Zagallo
Modified: 2024-01-30 06:40 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tadeu Zagallo 2024-01-29 10:30:49 PST
...
Comment 1 Tadeu Zagallo 2024-01-29 10:31:13 PST
<rdar://problem/121527265>
Comment 2 Tadeu Zagallo 2024-01-29 10:34:05 PST
Pull request: https://github.com/WebKit/WebKit/pull/23437
Comment 3 EWS 2024-01-30 06:40:32 PST
Committed 273748@main (ce4d5e1dd519): <https://commits.webkit.org/273748@main>

Reviewed commits have been landed. Closing PR #23437 and removing active labels.