[WGSL] Type constructors should not be used as types https://bugs.webkit.org/show_bug.cgi?id=268311 rdar://121527265

Reviewed by Mike Wyrzykowski.

Check that type constructors aren't used without template arguments

* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::TypeChecker::resolve):

Canonical link: https://commits.webkit.org/273748@main